@@ -2,14 +2,19 @@
 
 use strict;
 use warnings;
-use Debian::Debhelper::Dh_Version;
-use Debian::Debhelper::Dh_Lib ();
+use Debian::Debhelper::Dh_Lib qw(error);
 
 my @provides;
-my $version = $Debian::Debhelper::Dh_Version::version;
-$version =~ s/~.*//; # Drop backports marker
-$version =~ s/^\d+\K\..*//;
-for (my $i = Debian::Debhelper::Dh_Lib::LOWEST_VIRTUAL_DEBHELPER_COMPAT_LEVEL ; $i <= $version ; $i++) {
+my $lowest = Debian::Debhelper::Dh_Lib::LOWEST_VIRTUAL_DEBHELPER_COMPAT_LEVEL
+    // error("LOWEST_VIRTUAL_DEBHELPER_COMPAT_LEVEL is undef");
+my $highest = Debian::Debhelper::Dh_Lib::HIGHEST_STABLE_COMPAT_LEVEL
+    // error("HIGHEST_STABLE_COMPAT_LEVEL is undef");
+
+if ($highest < $lowest) {
+    error("HIGHEST_STABLE_COMPAT_LEVEL is lower than LOWEST_VIRTUAL_DEBHELPER_COMPAT_LEVEL");
+}
+
+for (my $i = $lowest ; $i <= $highest ; $i++) {
     push(@provides, "debhelper-compat (= $i)");
 }
 print "dh:CompatLevels=" . join(", ", @provides) . "\n";
