@@ -19,6 +19,9 @@ debhelper (13.0.1) UNRELEASED; urgency=medium
     field (rather than silently ignoring them).
   * debian/rules: Fix call to gen-provides that seemed to work more
     due to luck than by design.
+  * Dh_Lib.pm: Provide HIGHEST_STABLE_COMPAT_LEVEL, which reflects
+    the latest stable compat level.  Thanks to Jelmer Vernooĳ
+    for the suggstion.
 
   [ Translations ]
   * Fix typo in German translation.  (Andreas Bombe)
